# boost2simple

./: .gitignore  README.md  requirements.txt  setup.cfg
src/boost2simple/: cli.py  converter.py  gui.py  gui.spec  util.py
src/boost2simple.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/boost2simple/notes/: boostnote.py  simplenote.py
