[metadata]
name = boost2simple
version = 1.0.4
author = Rafael Witak
author_email = rafael.witak@gmail.com
description = A script to convert BoostNote exports to SimpleNote export format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RWitak/boost2simple
project_urls =
    Bug Tracker = https://github.com/RWitak/boost2simple/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src